--- a/portfolio.html
+++ b/portfolio.html
@@ -9,13 +9,13 @@
         <div id="all-contents">
 <nav>
 <h1>Garret Heberts Amazing Website</h1>
-<ul id=""nav-ul">
-<li class=""nav-li"></li>
-<a href=""index.html">Home</a>
+<ul id="nav-ul">
+<li class="nav-li">
+<a href="index.html">Home</a>
 </li>
-<li class=""nav-li">
+<li class="nav-li">
 <a
-href=""portfolio.html">Portfolio</a>
+href="portfolio.html">Portfolio</a>
 </li>
 </ul>
 </nav>
