Finalized platformer game

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,9 @@ href="portfolio.html">Portfolio</a>
 <h1>Portfolio</h1>
 <ul id="portfolio">
     <li>
-    <a href="fsd-
-    projects/platformer/">Platformer: A
+    <a href="fsd-projects/platformer/">Platformer: A
 cannon-dodging adventure game for
-Halleb0t</a>"
+Halleb0t</a>
     </li>
     <li>
         <a href="fsd-projects/bouncing-box/">
