--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -69,9 +69,9 @@
         //////////////////////////////////////////////////////////////////
 
         // TODO 2 - Variable declarations
-
-
-
+var positionX = 0;
+var points = 0;
+var speed = 10;
 
 
         /**
@@ -80,10 +80,13 @@
          * If the box drifts off the screen, turn it around!
          */
         function update() {
-
-        
-
-          
+moveBoxTo(positionX);
+ positionX = positionX + speed;      
+if (positionX > boardWidth) {
+speed *= -1}
+      else if (positionX < 0){
+        speed *= -1
+      }    
         }
 
         /**
@@ -94,10 +97,10 @@
          * - move the box to the left side of the screen.
          */
         function handleBoxClick() {
-
-
-
-
+positionX = 0;
+changeBoxText(points);
+points = points + 1;
+speed = 3 * points +10
         }
 
 
